--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Insperon</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i|Roboto:500" rel="stylesheet">
-    <link rel="stylesheet" href="/dist-copy/css/style.css">
+    <link rel="stylesheet" href="/dist/css/style.css">
     <!-- <link rel="stylesheet" href="{{ URL::asset('dist - Copy/css/style.css') }}">
  -->
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
